syntax = "proto2";
package proto;

option java_package = "io.curvine.proto";
option java_multiple_files = true;
option java_outer_classname = "MountProto";

import "common.proto";

enum MountTypeProto {
    MOUNT_TYPE_PROTO_CST = 0;
    MOUNT_TYPE_PROTO_ORCH = 1;
}

message MountInfoProto {
    required string cv_path = 1;
    required string ufs_path = 2;
    required uint32 mount_id = 3;
    map<string, string> properties = 4;
    required int64 ttl_ms = 5;
    required TtlActionProto ttl_action = 6;
    required ConsistencyStrategyProto consistency_strategy = 7;
    optional StorageTypeProto storage_type = 8;
    optional int64 block_size = 9;
    optional int32 replicas = 10;
    required MountTypeProto mount_type = 11;
}

message MountOptionsProto {
    required bool update = 1 [default = false];
    map<string, string> add_properties = 2;
    optional int64 ttl_ms = 3;
    optional TtlActionProto ttl_action = 4;
    optional ConsistencyStrategyProto consistency_strategy = 5;
    optional StorageTypeProto storage_type = 6;
    optional int64 block_size = 7;
    optional int32 replicas = 8;
    required MountTypeProto mount_type = 9;
    repeated string remove_properties = 10;
}

enum ConsistencyStrategyProto {
    CONSISTENCY_STRATEGY_PROTO_NONE = 0;
    CONSISTENCY_STRATEGY_PROTO_ALWAYS = 1;
}

message MountRequest {
    required string cv_path = 1;
    required string ufs_path = 2;
    required MountOptionsProto mount_options = 3;
}

message MountResponse {
}

message UnMountOptions {
    map<string, string> properties = 1;
}

message UnMountRequest {
    required string cv_path = 1;
}

message UnMountResponse {
}

message GetMountTableRequest {}

message GetMountTableResponse {
    repeated MountInfoProto mount_table = 1;
}

message GetMountInfoRequest {
    required string path = 1;
}

message GetMountInfoResponse {
    optional MountInfoProto mount_info = 1;
}